# ruffd

./: Architecture.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
ruffd/: Cargo.toml
ruffd-core/: Cargo.toml
ruffd-core/src/: lib.rs  notifications.rs  requests.rs  ruff_utils.rs  server.rs  server_ops.rs  service.rs
ruffd-macros/: Cargo.toml
ruffd-macros/src/: lib.rs
ruffd-macros/tests/notification/: additional_param.rs  additional_param.stderr  missing_member.rs  missing_member.stderr
ruffd-macros/tests/server_state/: type_names.rs  type_names.stderr
ruffd-types/: Cargo.toml
ruffd-types/benches/: agg_avl_tree.rs  rope.rs
ruffd-types/src/: common.rs  error.rs  interface.rs  lib.rs  state.rs
ruffd-types/src/collections/: agg_avl_tree.rs  mod.rs  rope.rs
ruffd/src/: main.rs
src/: main.rs
