[package]
name = "ruffd-core"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ruffd-types = { path="../ruffd-types" }
ruffd-macros = { path="../ruffd-macros" }
ruff = { git = "https://github.com/charliermarsh/ruff", tag = "v0.0.46", version = "0.0.46" }
lazy_static = "1.4"
regex = "1.6"
