[package]
name = "ruffd-macros"
version = "0.0.1"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro-error = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
ruffd-types = { path = "../ruffd-types" }
trybuild = "1.0"
lsp-types = "0.93"
serde_json = "1.0"
