[package]
name = "ruffd-types"
version = "0.0.1"
edition = "2021"

[dependencies]
lsp-types = "0.93"
ruff = { git = "https://github.com/charliermarsh/ruff", rev = "83f18193c249c35af6e3a210645d6c3178d1980b" }
tokio = { version = "1.20", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
bencher = "0.1"
rand = { version = "0.8", features = ["small_rng"]}
hex-literal = "0.3"

[[bench]]
name = "rope"
harness = false

[[bench]]
name = "agg_avl_tree"
harness = false
