[package]
name = "ruffd-types"
version = "0.0.1"
edition = "2021"

[dependencies]
lsp-types = "0.93"
ruff = { git = "https://github.com/charliermarsh/ruff", rev = "f50ff6105637de28f0f51b04c65543c59c90bfaf", version = "0.0.95" }
tokio = { version = "1.20", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
ruffd-macros = { path = "../ruffd-macros" }

[dev-dependencies]
bencher = "0.1"
rand = { version = "0.8", features = ["small_rng"]}
hex-literal = "0.3"

[[bench]]
name = "rope"
harness = false

[[bench]]
name = "agg_avl_tree"
harness = false
